--- a/cnfonts/cnfonts.conf
+++ b/cnfonts/cnfonts.conf
@@ -1,1 +1,1 @@
-(("program" . 14) ("read-book" . 12.5) ("org-profile" . 12.5))
+(("program" . 14) ("profile1") ("org-profile" . 12.5) ("read-book" . 12.5))
