--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,9 @@
 [submodule "site-lisp/copilot"]
 	path = site-lisp/copilot
 	url = git@github.com:happyo/copilot.el.git
+[submodule "site-lisp/treemacs-nerd-icons"]
+	path = site-lisp/treemacs-nerd-icons
+	url = https://github.com/rainstormstudio/treemacs-nerd-icons.git
+[submodule "site-lisp/nerd-icons"]
+	path = site-lisp/nerd-icons
+	url = https://github.com/rainstormstudio/nerd-icons.el.git
