@dev # Add some utils

--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,7 @@ tree-sitter/
 tabsession.el
 
 debug-adapters/
+devdocs/
 
 *.cache
 # End of https://www.toptal.com/developers/gitignore/api/emacs
