@dev # Modify treesit

--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,6 @@ tabsession.el
 debug-adapters/
 devdocs/
 
-.DS_Store
+*.DS_Store
 *.cache
 # End of https://www.toptal.com/developers/gitignore/api/emacs
