--- a/.gitmodules
+++ b/.gitmodules
@@ -52,18 +52,15 @@
 [submodule "site-lisp/xwwp"]
 	path = site-lisp/xwwp
 	url = git@github.com:happyo/xwwp.git
-[submodule "site-lisp/elysium"]
-	path = site-lisp/elysium
-	url = https://github.com/lanceberge/elysium.git
 [submodule "site-lisp/svg-lib"]
 	path = site-lisp/svg-lib
 	url = git@github.com:happyo/svg-lib.git
-[submodule "site-lisp/aider"]
-	path = site-lisp/aider
-	url = https://github.com/tninja/aider.el.git
 [submodule "site-lisp/modus-themes"]
 	path = site-lisp/modus-themes
 	url = https://github.com/protesilaos/modus-themes.git
 [submodule "site-lisp/org-numbering"]
 	path = site-lisp/org-numbering
 	url = https://github.com/yibie/org-numbering.git
+[submodule "site-lisp/gptel-aibo"]
+	path = site-lisp/gptel-aibo
+	url = https://github.com/dolmens/gptel-aibo.git
