chore: update .gitignore and .gitmodules, switch to straight.el for package management
- Remove unnecessary entries from .gitignore and add new ones
- Remove several submodules from .gitmodules
- Add early-init.el for disabling package-enable-at-startup
- Update init files to use straight.el for package management instead of load-path
- Delete submodule directories for removed packages

--- a/.gitignore
+++ b/.gitignore
@@ -126,7 +126,6 @@ projects
 blink-search/
 
 .extension/
-tree-sitter/
 
 tabsession.el
 
@@ -137,3 +136,5 @@ devdocs/
 *.cache
 # End of https://www.toptal.com/developers/gitignore/api/emacs
 .aider*
+straight/
+tree-sitter/
