feat(search): integrate Vertico and Vertico-posframe for enhanced completion
- Added Vertico and Vertico-posframe as submodules in `.gitmodules`
- Configured Vertico with custom load path and key bindings
- Enabled Vertico-posframe for improved UI positioning
- Updated `init-search.el` to load and configure these packages
- Adjusted completion styles to include `fussy` and other strategies
- Updated `lsp-bridge` submodule to the latest commit

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,9 @@
 [submodule "site-lisp/svg-lib"]
 	path = site-lisp/svg-lib
 	url = git@github.com:happyo/svg-lib.git
+[submodule "site-lisp/vertico"]
+	path = site-lisp/vertico
+	url = https://github.com/minad/vertico.git
+[submodule "site-lisp/vertico-posframe"]
+	path = site-lisp/vertico-posframe
+	url = https://github.com/tumashu/vertico-posframe.git
